Refactored unit tests inside user-ms